@@ -2302,11 +2302,11 @@ aopGet (asmop * aop, int offset, bool bit16)
               emit2 ("ldh a,(%s+%d)", aop->aopu.aop_dir, offset);
               dbuf_append_char (&dbuf, 'a');
             }
-	  else if (TARGET_IS_RABBIT)
+          else if (IS_R2K)
             {
-	      emit2 ("ioi");
-	      emit2 ("ld a,(%s)", aop->aopu.aop_dir);
-	      emit2 ("nop");
+              emit2 ("ioi");
+              emit2 ("ld a,(%s)", aop->aopu.aop_dir);
+              emit2 ("nop");
               dbuf_append_char (&dbuf, 'a');
             }
           else
@@ -2508,24 +2508,24 @@ aopPut (asmop *aop, const char *s, int offset)
       break;
 
     case AOP_SFR:
-      if( IS_GB )
+      if (IS_GB)
         {
           //  wassert (IS_GB);
           if (strcmp (s, "a"))
             emit2 ("ld a,%s", s);
           emit2 ("ldh (%s+%d),a", aop->aopu.aop_dir, offset);
         }
-      else if (TARGET_IS_RABBIT)
+      else if (IS_R2K)
         {
           if (strcmp (s, "a"))
             emit2 ("ld a,%s", s);
 	  
-	  /* LM 20110928: Need to fix to emit either "ioi" or "ioe"
-	   * (for internal vs. external I/O space
-	   */
-	  emit2 ("ioi");
+          /* LM 20110928: Need to fix to emit either "ioi" or "ioe"
+           * (for internal vs. external I/O space
+           */
+          emit2 ("ioi");
           emit2 ("ld (%s),a", aop->aopu.aop_dir);
-	  emit2 ("nop");
+          emit2 ("nop");
         }
       else
         { /*.p.t.20030716 handling for i/o port read access for Z80 */
@@ -4049,10 +4049,8 @@ genFunction (const iCode * ic)
      then save all potentially used registers. */
   if (IFFUNC_ISISR (sym->type))
     {
-      if (TARGET_IS_RABBIT)
-        {
-	  emit2 ("push ip");
-        }
+      if (IS_R2K)
+        emit2 ("push ip");
       
       /* If critical function then turn interrupts off */
       /* except when no interrupt number is given then it implies the NMI handler */
@@ -4069,7 +4067,7 @@ genFunction (const iCode * ic)
          If critical function then turn interrupts off */
       if (IFFUNC_ISCRITICAL (sym->type))
         {
-          if (IS_GB || TARGET_IS_RABBIT)
+          if (IS_GB || IS_R2K)
             {
               emit2 ("!di");
             }
@@ -4286,13 +4284,9 @@ genEndFunction (iCode * ic)
       if (IFFUNC_ISCRITICAL (sym->type))
         {
           if (IS_GB)
-            {
               emit2 ("!ei");
-            }
-	  else if (TARGET_IS_RABBIT)
-	    {
-	      emit2( "ipres" );
-	    }
+          else if (IS_R2K)
+            emit2( "ipres" );
           else
             {
               symbol *tlbl = newiTempLabel (NULL);
@@ -4318,12 +4312,12 @@ genEndFunction (iCode * ic)
       /* "critical interrupt" is used to imply NMI handler */
       if (!IS_GB && IFFUNC_ISCRITICAL (sym->type) && FUNC_INTNO(sym->type) == INTNO_UNSPEC)
         emit2 ("retn");
-      else if (TARGET_IS_RABBIT && IFFUNC_ISCRITICAL (sym->type) && FUNC_INTNO(sym->type) == INTNO_UNSPEC)
+      else if (IS_R2K && IFFUNC_ISCRITICAL (sym->type) && FUNC_INTNO(sym->type) == INTNO_UNSPEC)
         {
-	  // ISR exit sequence that works on the rabbit 4000
-	  emit2 ("pop ip");
-	  emit2 ("ipres");
-	  emit2 ("ret");
+          // ISR exit sequence that works on the rabbit 4000
+          emit2 ("pop ip");
+          emit2 ("ipres");
+          emit2 ("ret");
         }
       else
         emit2 ("reti");
@@ -9073,7 +9067,7 @@ genCritical (const iCode *ic)
 {
   symbol *tlbl = regalloc_dry_run ? 0 : newiTempLabel (0);
 
-  if (IS_GB || TARGET_IS_RABBIT)
+  if (IS_GB || IS_R2K)
     {
       emit2 ("!di");
       regalloc_dry_run_cost += 1;
@@ -9127,7 +9121,7 @@ genEndCritical (const iCode *ic)
       emit2 ("!ei");
       regalloc_dry_run_cost += 1;
     }
-  else if (TARGET_IS_RABBIT)
+  else if (IS_R2K)
     {
       emit2 ("ipres");
       regalloc_dry_run_cost += 1;
